@@ -1,26 +1,26 @@
 d72779236b0673f784313dc100ca16d1 *ChangeLog
-455609b40886c3507e99e8c53ff2ab97 *DESCRIPTION
+d28a105afc47eee5adfa1b9437d411ab *DESCRIPTION
 eb723b61539feef013de476e68b5c50a *GPL-2
 d32239bcb673463ab874e80d47fae504 *GPL-3
 82da699a39ddc36665f053c7482a1da6 *LICENSE.note
 23d895116e9dcd18d41dff4f06921d8d *NAMESPACE
-42364b62ff702d39971d181f2ff62235 *NEWS
+bca8d3b1127590ca159e53d0282b648f *NEWS
 fb0337e258c14ed33df4df46ffa7fc9e *R/axis.R
-ee82a6320adb6de9196958d84f06a4f5 *R/bwplot.R
-a0beefa00618d40429a20ac3e53d8c7a *R/cloud.R
+84efa4ee4bfd4843c6dbb7937b1d1cb1 *R/bwplot.R
+53437e1606fcedc25902bd1f663956ca *R/cloud.R
 61951b849dc60405014d91484b17f361 *R/common.R
-2551de9cb475e757227946c41c957f4a *R/densityplot.R
+0b0bf45066eaed55e098295f573c56f4 *R/densityplot.R
 ff084fd4680fc875d453073608c81596 *R/histogram.R
 22c04a0c8d8b03608675017b3cdff0b0 *R/interaction.R
 cb852d7489d74ea862e77df0ab108dcd *R/layout.R
 c01fb10311bebb04855b98a1c40abd22 *R/legend.R
 c09309a40c089077d283ea7d02d28dfa *R/levelplot.R
 aec90deb3db94f65c3f0977d69339995 *R/make.groups.R
-8cf78e7d9050f28353d5721cbb40e32d *R/miscellaneous.R
+2151874b3c366663c1b38fb1fd4070b3 *R/miscellaneous.R
 448c1c26d3b587a76c58836df8b2e666 *R/panel.smooth.R
 14a775d0aa3f7ae30fb8aba5c93c1484 *R/panel.smoothscatter.R
 0380714a5a5a4ec9535b3501efba4cc4 *R/panel.superpose.R
-01d1504f0a589b2611e2f85838c2e1d3 *R/panels.R
+be370ef0ea4a0dc4e8417175809d93b1 *R/panels.R
 dd13ac0b5cd89c616fdc062af3bdadeb *R/parallel.R
 4ce48d090c2ceaf5cea1aa946a692eec *R/print.trellis.R
 043234eb0e3c4039004a56188e616310 *R/qq.R
@@ -35,13 +35,16 @@ f5c8c7178bb827879815060218696269 *R/summary.trellis.R
 776bced283973b7544d7ad0b4db0064d *R/tmd.R
 3c405542fd289dedfcf0aa0a02fe9f23 *R/update.trellis.R
 49b8041000d9721e28e7977436de02a1 *R/xyplot.R
-fecef98420b0413f537082f840c307b9 *R/xyplot.ts.R
+bba242a3753b14ebce29dcd6d9d33d2c *R/xyplot.ts.R
 7dab32f13ada41b4296f2d68615dbb73 *R/zzz.R
-87037692283a72c43d93c07801776b99 *data/barley.rda
-ee480b535f5c4c5d78266446a6f982c0 *data/environmental.rda
-eaaa3d9aa8fdc6b3cadab2d791d66c8c *data/ethanol.rda
-e3d49e6f5a6bfbd6afca2a7b0313d859 *data/melanoma.rda
-fb513a33f2c6b7520a7b8ccee7f777b3 *data/singer.rda
+d7c687ac84f00ee7e105c13314a06a83 *README.md
+765ee6e3bc3240ac18845b75292db266 *data/USMortality.rda
+839fa6a8802e12e50eee0cc823833dc3 *data/USRegionalMortality.rda
+b896eea243a9e0dde2d4cf2290a70587 *data/barley.rda
+1ae67b3abf8491f146e72cf92fcc7468 *data/environmental.rda
+93de8686fb5a9ba3121e9bd0d568d978 *data/ethanol.rda
+1c8aa3771ac201a7c3dad1ea51f6db1f *data/melanoma.rda
+588630284b33f436b157adba41d25bb1 *data/singer.rda
 5b19b9d9c6ceea57bbd416fd55f4cbbb *demo/00Index
 49b53be0f5cfbc31fdf2d1028ab66b01 *demo/intervals.R
 9ec1d932fca442660b60818b0be9c0f3 *demo/labels.R
@@ -55,6 +58,7 @@ eec1e6212e5255c76c7213e11fdf457c *inst/po/fr/LC_MESSAGES/R-lattice.mo
 7e0980c816ea1fa9e5dc4651bfa00842 *inst/po/pl/LC_MESSAGES/R-lattice.mo
 355d2d5a8463af6c670b017a3d9e8411 *man/Lattice.Rd
 40f3906db75059b7b0c73f544e5bd671 *man/Rows.Rd
+7f9e6d0bea5d8524c0a05343efcfcc41 *man/USMortality.Rd
 e7dbcdefba98238488eaf82d37f3e915 *man/axis.default.Rd
 d32fef9c6d91a0f11bfbbf748e285688 *man/banking.Rd
 5a8fe5da32d284aa737ab5bb68672b46 *man/barchart.table.Rd
@@ -64,16 +68,16 @@ d32fef9c6d91a0f11bfbbf748e285688 *man/banking.Rd
 7a9f48a2dd425c447df410a2a8403f16 *man/draw.key.Rd
 23d5aa6ada174889c7ad6998304c67e1 *man/environmental.Rd
 a0837df59d69a24d7472c27b9dd4c68b *man/ethanol.Rd
-9f5c4373d5dc6609bf2e8ac58b330c65 *man/histogram.Rd
+eac3d6949848823828088ef0a704ea3d *man/histogram.Rd
 36639924a81841f411a0413d5ace3146 *man/interaction.Rd
 8df41b0a79c9f43941f70e280e3594eb *man/lattice.options.Rd
 7852ba42b1bed6da21746fde616c5043 *man/latticeParseFormula.Rd
 06643aee5ed33e7164ee08bf33c92fec *man/level.colors.Rd
 f7925fbafe3606b10dba960f4f743aee *man/levelplot.Rd
-94eb156266865580489c9a0fad49d3d2 *man/llines.Rd
+e051c256d6ca1726928940255a38f613 *man/llines.Rd
 637c4d16ebc7d78a3d198bb02f94bc30 *man/lset.Rd
 475808636848df6ceb845270fd3aa402 *man/make.groups.Rd
-f1ce7c6c1b85d44d27ae18d6d6c01dd0 *man/melanoma.Rd
+5e89fce7ef15b4ab47d0f720c9d41120 *man/melanoma.Rd
 28f95db01779fb88e18fd9bc757ac4e1 *man/oneway.Rd
 44e4c575f0412e87fd81e6cd43e8f274 *man/packet.panel.default.Rd
 cfd699eefba794361bbf2836b33a4e7a *man/panel.axis.Rd
@@ -121,7 +125,7 @@ c173e398cfd671dd862294a86fad0a40 *po/R-de.po
 e6fd46bf32639ef705d1c776df95e27c *po/R-en@quot.po
 d0142a77ff4b63f331093c2626223263 *po/R-fr.po
 3ad6a2617b138a820b2a7b12172323c3 *po/R-ko.po
-505aa82d1a31d4bf1604ffef9d19973b *po/R-lattice.pot
+1e3629bf8f448a52b6c8f69e6a6489a1 *po/R-lattice.pot
 fe4f01c840dec7524804ae645f329b07 *po/R-pl.po
 e92972db59c6aa30de492fc63d8a332f *src/init.c
 918025909f36306797291250b5360243 *src/threeDplot.c
